Fixed agent spacing and tested for up to 12 agents

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,20 @@ h1, h2 {
     margin: 2%;
 }
 
+#agent_container{
+    padding:0;
+    margin:0;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
+
+.agent_icon{
+    height:5vw;
+    padding-top:2.5vw;
+    padding-bottom:2.5vw;
+}
+
 
 .blur {
     width: 100%;
